--- a/style.css
+++ b/style.css
@@ -8,50 +8,102 @@ body{
 h2{
     color: #28E600;
     font-family: 'REM', Arial, Helvetica, sans-serif;
+    margin: 10px;
+    padding: 0px 10px;
     margin-left: 20px;
     text-shadow: 2px 2px 4px black;
 }
+a{
+    text-decoration: none;
+    color: #ffffff;
+}
+
 ul{
-    color:#ffffff;
-    
-}
-li.menu-entrada-1 , li.menu-entrada-2{
-    border: 1px solid rgb(255, 255, 255);
-    padding: 10px;
-    border-radius: 20px;
-    margin: 5px;
-}
-li.menu-entrada-1:hover,li.menu-entrada-1:hover{
-    background-color: #ffffff;
-    color: black;
-}
-li.menu-central:hover{
-    color: #28E600;
+    color:#ffffff; 
 }
 li{
-    font-family: 'Open Sans',Arial, Helvetica, sans-serif;
-    display: inline-block;
-    margin:10px;
-    text-shadow: 1px 1px 3px black;
+    
+    text-decoration: none;
+    list-style: none;
 }
+
 nav{
+    font-family: 'Open sans', sans-serif;
     display: flex;
     justify-content: space-between;
+    justify-items: center;
+    align-items: center;
+}
+.menu-central{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 10px;
+    padding: 0px 10px;
+    gap: 2rem;
+}
+.menu-central-link{
+    font-size: 1.1rem;
+}
+.menu-central-link:hover{
+    color: #28E600;
+    transition: .3s;
+    transform: scale(1.1);
+}
+.menu-central-cadastro{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: .8rem;
+    margin: 10px;
+    padding: 0px 10px;
+}
+.btn{
+    text-decoration: none;
+    background-color: #9f45cf;
+    color:#fff;
+    font-weight: 500;
+    font-size: 1.1rem;
+    padding: 8px 22px;
+    border-radius: 15px;
+    box-shadow: 1px 1px 3px #250d1f76;
+}
+.btn:hover{
+    background-color: transparent;
+    border: 1px solid #fff;
+    color: #ffffff;
+    transform: scale(1.05);
+    transition: .4s;
+    
 }
 header{
+    height: 80vh;
+    width: 100%;
     font-family: 'Roboto',Arial, Helvetica, sans-serif;
     color: #ffffff; 
     display: flex;
     flex-direction: row;
 }
+article{
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+}
 h1{
    font-size: 3em;
-   margin-top: 50px;
-   padding: 20px;
+   margin: 60px 30px 5px 30px;
+   padding: 10px;
    text-shadow: 2px 2px 4px black;
 }
 p{
-    margin: 20px;
+   
+    margin: 30px 30px 20px 30px;
+    padding: 10px;
     text-shadow: 2px 2px 4px black;
+}
+#btn-escute-agora{
+    max-width: 110px;
+    padding: 15px 45px;
+    margin: 0px 0px 0px 40px;
 }
 
